--- a/src/main/resources/com/helha/java/q2/terminal/bancontact.fxml
+++ b/src/main/resources/com/helha/java/q2/terminal/bancontact.fxml
@@ -3,14 +3,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="200.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<?import java.net.URL?>
+<VBox prefHeight="200.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.helha.java.q2.terminal.Views.BancontactViewController"
+      style="-fx-padding: 20px;">
     <children>
-        <Label layoutX="39.0" layoutY="40.0" text="Montant :" />
-        <Label fx:id="montantLabel" layoutX="120.0" layoutY="36.0"  />
-        <Button layoutX="50.0" layoutY="100.0" mnemonicParsing="false" text="Accepter" />
-        <Button layoutX="200.0" layoutY="100.0" mnemonicParsing="false" text="Refuser" />
-        <Label fx:id="resultLabel" layoutX="120.0" layoutY="160.0" />
+        <Label text="Montant :" styleClass="label" />
+        <Label fx:id="montantLabel" styleClass="amount-label"  />
+        <TextField fx:id="promoCodeTextField" promptText="Code promo" styleClass="text-field" style="-fx-padding: 10px;" />
+        <HBox spacing="10.0" style="-fx-padding: 10px 0;">
+            <Button fx:id="acceptButton" mnemonicParsing="false" text="Accepter" styleClass="button" />
+            <Button fx:id="rejectButton" mnemonicParsing="false" text="Refuser" styleClass="button" />
+        </HBox>
+        <Label fx:id="resultLabel" styleClass="result-label" />
     </children>
-</AnchorPane>
+    <stylesheets>
+        <URL value="@modena.css" />
+    </stylesheets>
+</VBox>
